--- a/checkout/Makefile
+++ b/checkout/Makefile
@@ -38,3 +38,36 @@ install-smartimports: bindir
 	test -f ${SMARTIMPORTS} || \
 		(GOBIN=${BINDIR} go install github.com/pav5000/smartimports/cmd/smartimports@latest && \
 		mv ${BINDIR}/smartimports ${SMARTIMPORTS})
+
+
+get-go-deps:
+	go get -u google.golang.org/protobuf/cmd/protoc-gen-go
+	go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
+
+vendor-proto:
+		mkdir -p vendor-proto
+		@if [ ! -d vendor-proto/google ]; then \
+			git clone --depth=1 https://github.com/googleapis/googleapis vendor-proto/googleapis &&\
+			mkdir -p  vendor-proto/google/ &&\
+			mv vendor-proto/googleapis/google/api vendor-proto/google &&\
+			rm -rf vendor-proto/googleapis ;\
+		fi
+		@if [ ! -d vendor-proto/google/protobuf ]; then\
+			git clone --depth=1 https://github.com/protocolbuffers/protobuf vendor-proto/protobuf &&\
+			mkdir -p  vendor-proto/google/protobuf &&\
+			mv vendor-proto/protobuf/src/google/protobuf/*.proto vendor-proto/google/protobuf &&\
+			rm -rf vendor-proto/protobuf ;\
+		fi
+
+generate:
+	mkdir -p pkg/checkout_v1
+	protoc -I api/checkout_v1 -I vendor-proto \
+	--go_out=pkg/checkout_v1 --go_opt=paths=source_relative \
+	--go-grpc_out=pkg/checkout_v1 --go-grpc_opt=paths=source_relative \
+	api/checkout_v1/checkout.proto
+
+	mkdir -p pkg/product_service_v1
+	protoc -I api/product_service_v1 -I vendor-proto \
+	--go_out=pkg/product_service_v1 --go_opt=paths=source_relative \
+	--go-grpc_out=pkg/product_service_v1 --go-grpc_opt=paths=source_relative \
+	api/product_service_v1/product-service.proto
