--- a/checkout/config_example.yml
+++ b/checkout/config_example.yml
@@ -2,3 +2,5 @@ token: testtoken
 services:
   loms: "loms:50051"
   productservice: "route256.pavl.uk:8082"
+grpc_port: 50050
+database_url: "postgres://user:password@postgres_checkout:5432/checkout?sslmode=disable"
