--- a/loms/config_example.yml
+++ b/loms/config_example.yml
@@ -1,2 +1,2 @@
 grpc_port: 50051
-database_url: "postgres://user:password@postgres_loms:5432/loms?sslmode=disable"
+database_url: "postgres://user:password@pgbouncer_loms:5432/loms?sslmode=disable"
