--- a/checkout/Makefile
+++ b/checkout/Makefile
@@ -71,3 +71,9 @@ generate:
 	--go_out=pkg/product_service_v1 --go_opt=paths=source_relative \
 	--go-grpc_out=pkg/product_service_v1 --go-grpc_opt=paths=source_relative \
 	api/product_service_v1/product-service.proto
+
+
+test-coverage:
+	@go test ./... -coverprofile=coverage.out && go tool cover -html=coverage.out; \
+	 go tool cover -func=./coverage.out | grep "total"; \
+     grep -sqFx "/coverage.out" .gitignore || echo "/coverage.out" >> .gitignore
