--- a/loms/config_example.yml
+++ b/loms/config_example.yml
@@ -1,2 +1,6 @@
 grpc_port: 50051
 database_url: "postgres://user:password@pgbouncer_loms:5432/loms?sslmode=disable"
+brokers:
+  - "kafka1:29091"
+  - "kafka2:29092"
+  - "kafka3:29093"
