--- a/libs/metrics/prometheus.yml
+++ b/libs/metrics/prometheus.yml
@@ -23,4 +23,11 @@ scrape_configs:
     static_configs:
       - targets: 
         - "host.docker.internal:8082"
+
+alerting:
+  alertmanagers:
+  - scheme: http
+    static_configs:
+    - targets:
+      - "alertmanager:9093"
   
